#182 Use a free PrimeFaces template

--- a/tradista-web/WebContent/pages/processingorgdefaults.xhtml
+++ b/tradista-web/WebContent/pages/processingorgdefaults.xhtml
@@ -4,8 +4,8 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:c="http://java.sun.com/jstl/core"
 	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
-	<ui:define name="title">Tradista Processing Org Defaults</ui:define>
-	<ui:define name="viewname">Tradista Processing Org Defaults</ui:define>
+	<ui:define name="title">Eclipse Tradista Processing Org Defaults</ui:define>
+	<ui:define name="viewname">Eclipse Tradista Processing Org Defaults</ui:define>
 	<ui:define name="content">
 		<h:form id="poDefaultsForm">
 			<p:panel header="Processing Org Defaults"
