--- a/tradista-web/WebContent/pages/specificrepotrade.xhtml
+++ b/tradista-web/WebContent/pages/specificrepotrade.xhtml
@@ -3,8 +3,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
-	<ui:define name="title">Tradista Specific Repo Dashboard</ui:define>
-	<ui:define name="viewname">Tradista Specific Repo Dashboard</ui:define>
+	<ui:define name="title">Eclipse Tradista Specific Repo Dashboard</ui:define>
+	<ui:define name="viewname">Eclipse Tradista Specific Repo Dashboard</ui:define>
 	<ui:define name="content">
 		<h:form id="dashboardForm">
 			<p:growl id="pricingMsg" for="pricingMsg" showDetail="true" />
