--- a/tradista-web/WebContent/WEB-INF/menu.xhtml
+++ b/tradista-web/WebContent/WEB-INF/menu.xhtml
@@ -2,8 +2,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:po="http://primefaces.org/poseidon">
+	xmlns:p="http://primefaces.org/ui">
 	<h:form id="menuform">
 		<p:menubar model="#{menuController.model}">
 			<f:facet name="options">
