--- a/tradista-web/WebContent/login.xhtml
+++ b/tradista-web/WebContent/login.xhtml
@@ -14,11 +14,11 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 	</f:facet>
 	<link rel="icon" type="image/x-icon"
-		href="#{resource['poseidon-layout:images/tradista-icon-16x16.png']}" />
-	<h:outputStylesheet name="css/layout-light.css"
-		library="poseidon-layout" />
+		href="#{resource['images:tradista-icon-16x16.png']}" />
+	<!--<h:outputStylesheet name="css/layout-light.css"
+		library="poseidon-layout" />-->
 	<h:outputStylesheet name="tradista.css" />
-	<title>Tradista Login page</title>
+	<title>Eclipse Tradista Login page</title>
 </h:head>
 
 
@@ -26,9 +26,9 @@
 	<div class="login-wrapper">
 		<div class="login-panel">
 			<h:form class="login-form" id="loginForm">
-				<p:graphicImage name="images/logo-tradista-white.png"
-					library="poseidon-layout" width="300" height="300" />
-				<h2 class="login-label">Login To Tradista</h2>
+				<p:graphicImage name="logo-tradista-white.png" library="images"
+					width="300" height="300" />
+				<h2 class="login-label">Login To Eclipse Tradista</h2>
 				<p:inputText placeholder="Login" styleClass="login-input"
 					value="#{loginController.login}" />
 				<p:password placeholder="Password" styleClass="login-input"
