--- a/tradista-web/WebContent/pages/dashboard.xhtml
+++ b/tradista-web/WebContent/pages/dashboard.xhtml
@@ -3,8 +3,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
-	<ui:define name="title">Tradista Demo</ui:define>
-	<ui:define name="viewname">Tradista Demo</ui:define>
+	<ui:define name="title">Eclipse Tradista Demo</ui:define>
+	<ui:define name="viewname">Eclipse Tradista Demo</ui:define>
 	<ui:define name="content">
 		<p:growl id="msgs" showDetail="true" skipDetailIfEqualsSummary="true" />
 		<p:dashboard id="dashboard" model="#{dashboardController.model}"
