#182 Use a free PrimeFaces template

--- a/tradista-web/WebContent/WEB-INF/template.xhtml
+++ b/tradista-web/WebContent/WEB-INF/template.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -16,8 +16,6 @@
 	<title><ui:insert name="title">Eclipse Tradista</ui:insert></title>
 	<link rel="icon" type="image/x-icon"
 		href="#{resource['images:tradista-icon-16x16.png']}" />
-	<!--<h:outputScript name="js/layout.js" library="poseidon-layout" />
-	<h:outputScript name="js/prism.js" library="poseidon-layout" />-->
 	<ui:insert name="head" />
 	<h:outputStylesheet name="tradista.css" />
 </h:head>
@@ -42,8 +40,5 @@
 			<h:outputText value="" />
 		</f:facet>
 	</p:ajaxStatus>
-	<!--<h:outputStylesheet name="css/primeflex.min.css"
-		library="poseidon-layout" />
-	<h:outputStylesheet name="css/primeicons.css" library="poseidon-layout" />-->
 </h:body>
 </html>
