--- a/tradista-web/WebContent/login.xhtml
+++ b/tradista-web/WebContent/login.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -15,8 +15,7 @@
 	</f:facet>
 	<link rel="icon" type="image/x-icon"
 		href="#{resource['images:tradista-icon-16x16.png']}" />
-	<!--<h:outputStylesheet name="css/layout-light.css"
-		library="poseidon-layout" />-->
+
 	<h:outputStylesheet name="tradista.css" />
 	<title>Eclipse Tradista Login page</title>
 </h:head>
