--- a/tradista-web/WebContent/loginDemo.xhtml
+++ b/tradista-web/WebContent/loginDemo.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -15,8 +15,6 @@
 	</f:facet>
 	<link rel="icon" type="image/x-icon"
 		href="#{resource['images:tradista-icon-16x16.png']}" />
-	<!--<h:outputStylesheet name="css/layout-light.css"
-		library="poseidon-layout" />-->
 	<h:outputStylesheet name="tradista.css" />
 	<title>Eclipse Tradista Demo Login page</title>
 </h:head>
@@ -28,7 +26,7 @@
 			<h:form class="login-form" id="loginForm">
 				<p:graphicImage name="logo-tradista-white.png" library="images"
 					width="300" height="300" />
-				<h2 class="login-label">Login To Tradista Demo</h2>
+				<h2 class="login-label">Login To Eclipse Tradista Demo</h2>
 				<p:inputText placeholder="Login" styleClass="login-input"
 					value="#{loginDemoController.login}" />
 				<p:password placeholder="Password" styleClass="login-input"
