#182 Use a free PrimeFaces template

--- a/tradista-web/WebContent/WEB-INF/template.xhtml
+++ b/tradista-web/WebContent/WEB-INF/template.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -13,13 +13,11 @@
 			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 	</f:facet>
-	<title><ui:insert name="title">PrimeFaces Poseidon</ui:insert></title>
+	<title><ui:insert name="title">Eclipse Tradista</ui:insert></title>
 	<link rel="icon" type="image/x-icon"
-		href="#{resource['poseidon-layout:images/tradista-icon-16x16.png']}" />
-	<h:outputScript name="js/layout.js" library="poseidon-layout" />
-	<h:outputScript name="js/prism.js" library="poseidon-layout" />
+		href="#{resource['images:tradista-icon-16x16.png']}" />
 	<ui:insert name="head" />
-	<h:outputStylesheet name="tradista.css" />
+	<h:outputStylesheet name="tradista.css" library="css" />
 </h:head>
 
 <h:body>
@@ -42,8 +40,6 @@
 			<h:outputText value="" />
 		</f:facet>
 	</p:ajaxStatus>
-	<h:outputStylesheet name="css/primeflex.min.css"
-		library="poseidon-layout" />
-	<h:outputStylesheet name="css/primeicons.css" library="poseidon-layout" />
+	<h:outputStylesheet name="primeflex.min.css" library="css" />
 </h:body>
 </html>
