#182 Use a free PrimeFaces template

--- a/tradista-web/WebContent/WEB-INF/template.xhtml
+++ b/tradista-web/WebContent/WEB-INF/template.xhtml
@@ -17,7 +17,7 @@
 	<link rel="icon" type="image/x-icon"
 		href="#{resource['images:tradista-icon-16x16.png']}" />
 	<ui:insert name="head" />
-	<h:outputStylesheet name="tradista.css" />
+	<h:outputStylesheet name="tradista.css" library="css" />
 </h:head>
 
 <h:body>
@@ -40,5 +40,6 @@
 			<h:outputText value="" />
 		</f:facet>
 	</p:ajaxStatus>
+	<h:outputStylesheet name="primeflex.min.css" library="css" />
 </h:body>
 </html>
