--- a/tradista-web/WebContent/login.xhtml
+++ b/tradista-web/WebContent/login.xhtml
@@ -15,8 +15,7 @@
 	</f:facet>
 	<link rel="icon" type="image/x-icon"
 		href="#{resource['images:tradista-icon-16x16.png']}" />
-
-	<h:outputStylesheet name="tradista.css" />
+	<h:outputStylesheet name="tradista.css" library="css" />
 	<title>Eclipse Tradista Login page</title>
 </h:head>
 
