--- a/tradista-web/WebContent/pages/importermapping.xhtml
+++ b/tradista-web/WebContent/pages/importermapping.xhtml
@@ -3,8 +3,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/template.xhtml">
-	<ui:define name="title">Eclipse Tradista Allocation Configuration</ui:define>
-	<ui:define name="viewname">Eclipse Tradista Allocation Configuration</ui:define>
+	<ui:define name="title">Eclipse Tradista Importer Mapping</ui:define>
+	<ui:define name="viewname">Eclipse Tradista Importer Mapping</ui:define>
 	<ui:define name="content">
 		<h:form id="importerMappingForm">
 			<p:panel styleClass="tradista-central-component"
