#167 Provide a FIX based interface to import repo trades + a couple of Sonar fixes

--- a/tradista-web/WebContent/pages/importerror.xhtml
+++ b/tradista-web/WebContent/pages/importerror.xhtml
@@ -50,8 +50,8 @@
 									</p:autoComplete>
 								</p:row>
 								<p:row>
-									<p:outputLabel value="Message Id" for="messageIdComboBox" />
-									<p:inputNumber id="messageIdComboBox"
+									<p:outputLabel value="Message Id" for="messageIdTextField" />
+									<p:inputNumber id="messageIdTextField"
 										value="#{importErrorReportController.messageId}" />
 								</p:row>
 								<p:row>
