--- a/tradista-web/WebContent/pages/importerror.xhtml
+++ b/tradista-web/WebContent/pages/importerror.xhtml
@@ -64,6 +64,17 @@
 									</p:selectManyButton>
 								</p:row>
 								<p:row>
+									<p:outputLabel value="Import Error Type"
+										for="importErrorTypeButton" />
+									<p:selectManyButton
+										value="#{importErrorReportController.importErrorTypes}"
+										id="importErrorTypeButton"
+										converter="importErrorTypeConverter">
+										<f:selectItems
+											value="#{importErrorReportController.allImportErrorTypes}" />
+									</p:selectManyButton>
+								</p:row>
+								<p:row>
 									<p:outputLabel value="Error Date Range"
 										for="errorDatesDatePicker" />
 									<p:datePicker id="errorDatesDatePicker"
@@ -120,6 +131,9 @@
 								<p:column headerText="Status" sortBy="#{error.status}">
 									<p:outputLabel value="#{error.status}" />
 								</p:column>
+								<p:column headerText="Type" sortBy="#{error.importErrorType}">
+									<p:outputLabel value="#{error.importErrorType}" />
+								</p:column>
 								<p:column headerText="Error Message"
 									sortBy="#{error.errorMessage}">
 									<p:outputLabel value="#{error.errorMessage}" />
@@ -127,7 +141,7 @@
 							</p:dataTable>
 							<p:contextMenu id="contextMenu" for="importErrorTable">
 								<p:menuitem value="Try to solve"
-									action="#{importErrorReportController.solve}" />
+									action="#{importErrorReportController.tryToSolve}" />
 							</p:contextMenu>
 						</p:column>
 					</p:row>
